--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap");
 /*Seconday font family taken from google - Noto Sans*/
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+/* import bootstrap icons */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
 h1,
 h3,
@@ -18,6 +20,35 @@ body {
   margin: 0;
 }
 
-.loginBtn {
+.cursor {
   cursor: pointer;
+}
+
+.logo {
+  height: 80px;
+  width: 80px;
+}
+
+.navbar {
+  background-color: #fbecd9 !important;
+}
+
+.nav-link {
+  display: inline-block;
+}
+
+.banner {
+  background-image: url("./assets/header_banner.jpg");
+  background-size: cover;
+  background-position: center;
+  padding: 5rem;
+}
+label{
+  font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .navbar-text {
+    display: grid;
+  }
 }
