--- a/index.css
+++ b/index.css
@@ -62,6 +62,7 @@ label{
 }
 .card:hover {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  transform: translateY(-5px);
 }
 .category-card {
   position: relative;
