--- a/recipe_list/recipe_list.css
+++ b/recipe_list/recipe_list.css
@@ -3,6 +3,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); 
 }
 .boxSize{
     width: 100%;
@@ -52,10 +53,7 @@
 .read-more-btn:hover {
     background-color: #0056b3;
 }
-.recipe-list{
-    
-}
-  
+
 .bxslider{
     width: 100% !important;
 
