--- a/add_recipe/add_recipe.css
+++ b/add_recipe/add_recipe.css
@@ -1,15 +1,13 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-  }
-  
+
   h1 {
     text-align: center;
   }
   
   form {
-    max-width: 600px;
     margin: 0 auto;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
   }
   
   .form-group {
