--- a/recipe_details/recipe_details.css
+++ b/recipe_details/recipe_details.css
@@ -6,15 +6,8 @@
     background-position: center;
 }
 
-.overlay {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-    z-index: 0;
+.recipe-desc-container{
+    margin-left: 4rem;
 }
 
 .bg-gray-100 {
@@ -37,6 +30,9 @@
 .recipe-desc-box {
     padding: 30px 50px;
     margin-left: -50px;
+    background-color: #fbecd9;
+    border-radius: 8px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 
@@ -64,5 +60,9 @@
 @media (max-width:768px) {
     td {
         width: 100% !important;
+    }
+    .recipe-desc-container {
+        margin-left: 0;
+        margin-bottom: 1rem;
     }
 }
