changes in css and added comments

--- a/recipe_list/recipe_list.css
+++ b/recipe_list/recipe_list.css
@@ -19,7 +19,7 @@
     padding: 15px;
 }
 .bxslider {
-    width: 100%; /* Adjust this value to your desired width */
+    width: 100%; 
   }
   
 .recipe-content h2 {
