--- a/index.css
+++ b/index.css
@@ -116,6 +116,56 @@ label {
   margin: 1rem auto;
 }
 
+nav a {
+	color: #18272F;
+  position: relative;
+  text-decoration: none;
+}
+
+nav a::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 4px;
+  background-color: #18272F;
+  bottom: 0;
+  left: 0;
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform .3s ease-in-out;
+}
+
+nav a:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
+a.navbar-brand:hover::before{
+  transform-origin: 0%;
+  text-decoration: none;
+  transform: scaleX(0);
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
 @media screen and (max-width: 768px) {
   .navbar-text {
     display: grid;
